--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
         </svg>
       </button>
     </div>
-    <div id="menu" class="hidden md:flex space-x-6">
-      <a href="about.html" class="hover:underline">About</a>
-      <a href="services.html" class="hover:underline">Services</a>
-      <a href="how.html" class="hover:underline">How It Works</a>
-      <a href="booking.html" class="hover:underline">Booking</a>
-      <a href="contact.html" class="hover:underline">Contact</a>
-    </div>
+   <div id="menu" class="hidden flex-col space-y-4 md:flex md:flex-row md:space-y-0 md:space-x-6">
+  <a href="about.html" class="hover:underline">About</a>
+  <a href="services.html" class="hover:underline">Services</a>
+  <a href="how.html" class="hover:underline">How It Works</a>
+  <a href="booking.html" class="hover:underline">Booking</a>
+  <a href="contact.html" class="hover:underline">Contact</a>
+</div>
   </nav>
 
   <section class="bg-brand text-white min-h-screen flex flex-col justify-center items-center text-center px-6">
