--- a/index.html
+++ b/index.html
@@ -19,24 +19,23 @@
   </script>
 </head>
 <body class="font-sans text-gray-800">
-  <!-- Navigation -->
-  <nav class="bg-brand text-white px-6 py-4 relative">
-    <div class="flex justify-between items-center">
-      <a href="index.html" class="text-2xl font-bold">ClearPath Systems</a>
 
-      <!-- Hamburger menu for mobile -->
-      <div class="md:hidden">
-        <button id="menu-btn" class="focus:outline-none">
-          <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-              d="M4 6h16M4 12h16M4 18h16"></path>
-          </svg>
-        </button>
-      </div>
+  <!-- Navbar -->
+  <nav class="bg-brand text-white px-6 py-4 flex justify-between items-center relative z-50">
+    <a href="index.html" class="text-2xl font-bold">ClearPath Systems</a>
+
+    <!-- Hamburger button (mobile) -->
+    <div class="md:hidden">
+      <button id="menu-btn" class="focus:outline-none">
+        <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+            d="M4 6h16M4 12h16M4 18h16" />
+        </svg>
+      </button>
     </div>
 
-    <!-- Navigation Links -->
-    <div id="menu" class="transform scale-y-0 origin-top transition-all duration-300 ease-in-out flex-col space-y-4 mt-4 hidden md:flex md:transform-none md:scale-y-100 md:space-y-0 md:flex-row md:space-x-6 md:mt-0">
+    <!-- Desktop Menu -->
+    <div class="hidden md:flex space-x-6">
       <a href="about.html" class="hover:underline">About</a>
       <a href="services.html" class="hover:underline">Services</a>
       <a href="how.html" class="hover:underline">How It Works</a>
@@ -44,6 +43,20 @@
       <a href="contact.html" class="hover:underline">Contact</a>
     </div>
   </nav>
+
+  <!-- Mobile Sidebar Menu -->
+  <div id="mobile-menu"
+    class="fixed top-0 right-0 h-full w-64 bg-brand text-white transform translate-x-full transition-transform duration-300 ease-in-out z-40 md:hidden flex flex-col p-6 space-y-6 shadow-lg">
+    <div class="flex justify-between items-center mb-4">
+      <span class="text-lg font-semibold">Menu</span>
+      <button id="close-menu" class="text-white text-2xl">&times;</button>
+    </div>
+    <a href="about.html" class="hover:underline">About</a>
+    <a href="services.html" class="hover:underline">Services</a>
+    <a href="how.html" class="hover:underline">How It Works</a>
+    <a href="booking.html" class="hover:underline">Booking</a>
+    <a href="contact.html" class="hover:underline">Contact</a>
+  </div>
 
   <!-- Hero Section -->
   <section class="bg-brand text-white min-h-screen flex flex-col justify-center items-center text-center px-6">
@@ -58,16 +71,18 @@
     <p>&copy; 2025 ClearPath Systems. All rights reserved.</p>
   </footer>
 
-  <!-- Script -->
+  <!-- JavaScript for Mobile Menu -->
   <script>
-    const btn = document.getElementById('menu-btn');
-    const menu = document.getElementById('menu');
+    const menuBtn = document.getElementById('menu-btn');
+    const closeBtn = document.getElementById('close-menu');
+    const mobileMenu = document.getElementById('mobile-menu');
 
-    btn.addEventListener('click', () => {
-      menu.classList.toggle('hidden');
-      setTimeout(() => {
-        menu.classList.toggle('scale-y-0');
-      }, 10);
+    menuBtn.addEventListener('click', () => {
+      mobileMenu.classList.remove('translate-x-full');
+    });
+
+    closeBtn.addEventListener('click', () => {
+      mobileMenu.classList.add('translate-x-full');
     });
   </script>
 </body>
