--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Page Title Here</title>
+  <title>Home - ClearPath Systems</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="styles.css" />
   <script>
@@ -29,7 +29,7 @@
       <button id="menu-btn" class="focus:outline-none">
         <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                d="M4 6h16M4 12h16M4 18h16" />
+            d="M4 6h16M4 12h16M4 18h16" />
         </svg>
       </button>
     </div>
@@ -46,7 +46,7 @@
 
   <!-- Mobile Sidebar Menu -->
   <div id="mobile-menu"
-       class="fixed top-0 right-0 h-full w-64 bg-brand text-white transform translate-x-full transition-transform duration-300 ease-in-out z-40 md:hidden flex flex-col p-6 space-y-6 shadow-lg">
+    class="fixed top-0 right-0 h-full w-64 bg-brand text-white transform translate-x-full transition-transform duration-300 ease-in-out z-40 md:hidden flex flex-col p-6 space-y-6 shadow-lg">
     <div class="flex justify-between items-center mb-4">
       <span class="text-lg font-semibold">Menu</span>
       <button id="close-menu" class="text-white text-2xl">&times;</button>
@@ -58,11 +58,13 @@
     <a href="contact.html" class="hover:underline">Contact</a>
   </div>
 
-  <!-- Page Content -->
-  <main class="px-6 py-12 text-center">
-    <h1 class="text-3xl font-bold text-brand mb-4">Page Title Here</h1>
-    <p class="text-lg text-gray-700">Your page-specific content goes here.</p>
-  </main>
+  <!-- Hero Section -->
+  <section class="bg-brand text-white min-h-screen flex flex-col justify-center items-center text-center px-6">
+    <h1 class="text-4xl md:text-6xl font-bold">Clarity. Precision. Automation.</h1>
+    <p class="mt-4 text-xl md:text-2xl">Streamline your business with ClearPath Systems</p>
+    <a href="booking.html"
+      class="mt-8 bg-white text-brand px-6 py-3 rounded-xl font-semibold shadow hover:bg-gray-100">Book a Consultation</a>
+  </section>
 
   <!-- Footer -->
   <footer class="bg-brand text-white py-6 text-center">
