--- a/about.html
+++ b/about.html
@@ -1,26 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>About - ClearPath Systems</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="stylesheet" href="styles.css">
   <script>
-    tailwind.config = { theme: { extend: { colors: { brand: '#3D3A29' } } } }
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: { brand: '#3D3A29' }
+        }
+      }
+    }
   </script>
 </head>
 <body class="font-sans text-gray-800">
-  <nav class="bg-brand text-white px-6 py-4 flex justify-between items-center">
+
+  <!-- Navbar -->
+  <nav class="bg-brand text-white px-6 py-4 flex justify-between items-center relative z-50">
     <a href="index.html" class="text-2xl font-bold">ClearPath Systems</a>
-    <div class="md:hidden">
-      <button id="menu-btn" class="focus:outline-none">
-        <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
-        </svg>
-      </button>
-    </div>
-    <div id="menu" class="hidden md:flex space-x-6">
+
+    <!-- Hamburger button (mobile) -->
+    <button id="menu-btn" class="md:hidden focus:outline-none">
+      <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+          d="M4 6h16M4 12h16M4 18h16" />
+      </svg>
+    </button>
+
+    <!-- Desktop menu -->
+    <div class="hidden md:flex space-x-6">
       <a href="about.html" class="hover:underline">About</a>
       <a href="services.html" class="hover:underline">Services</a>
       <a href="how.html" class="hover:underline">How It Works</a>
@@ -29,6 +39,21 @@
     </div>
   </nav>
 
+  <!-- Mobile Sidebar Menu -->
+  <aside id="mobile-menu" 
+    class="fixed top-0 right-0 h-full w-64 bg-brand text-white transform translate-x-full transition-transform duration-300 ease-in-out z-50 flex flex-col p-6 space-y-6 shadow-lg md:hidden">
+    <div class="flex justify-between items-center mb-6">
+      <span class="text-lg font-semibold">Menu</span>
+      <button id="close-menu" class="text-white text-3xl font-bold focus:outline-none">&times;</button>
+    </div>
+    <a href="about.html" class="hover:underline">About</a>
+    <a href="services.html" class="hover:underline">Services</a>
+    <a href="how.html" class="hover:underline">How It Works</a>
+    <a href="booking.html" class="hover:underline">Booking</a>
+    <a href="contact.html" class="hover:underline">Contact</a>
+  </aside>
+
+  <!-- Page Content -->
   <section class="px-6 py-16 max-w-3xl mx-auto">
     <h2 class="text-3xl font-bold text-brand mb-6">About Me</h2>
     <p>Rose Monet Little is the founder of ClearPath Systems, where AI-powered workflow automation is designed to make business operations more efficient and stress-free. As a professional in public health and program evaluation, Rose brings a unique perspective that ensures every system is built with both people and performance in mind.</p>
@@ -39,10 +64,27 @@
     <p>&copy; 2025 ClearPath Systems. All rights reserved.</p>
   </footer>
 
+  <!-- Scripts -->
   <script>
-    const btn = document.getElementById('menu-btn');
-    const menu = document.getElementById('menu');
-    btn.addEventListener('click', () => { menu.classList.toggle('hidden'); });
+    const menuBtn = document.getElementById('menu-btn');
+    const closeBtn = document.getElementById('close-menu');
+    const mobileMenu = document.getElementById('mobile-menu');
+
+    menuBtn.addEventListener('click', () => {
+      mobileMenu.classList.remove('translate-x-full');
+    });
+
+    closeBtn.addEventListener('click', () => {
+      mobileMenu.classList.add('translate-x-full');
+    });
+
+    // Close sidebar on outside click
+    document.addEventListener('click', (e) => {
+      if (!mobileMenu.contains(e.target) && !menuBtn.contains(e.target)) {
+        mobileMenu.classList.add('translate-x-full');
+      }
+    });
   </script>
+
 </body>
 </html>
