--- a/services.html
+++ b/services.html
@@ -1,26 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Services - ClearPath Systems</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles.css" />
   <script>
-    tailwind.config = { theme: { extend: { colors: { brand: '#3D3A29' } } } }
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: { brand: '#3D3A29' }
+        }
+      }
+    }
   </script>
 </head>
 <body class="font-sans text-gray-800">
-  <nav class="bg-brand text-white px-6 py-4 flex justify-between items-center">
+
+  <!-- Navbar -->
+  <nav class="bg-brand text-white px-6 py-4 flex justify-between items-center relative z-50">
     <a href="index.html" class="text-2xl font-bold">ClearPath Systems</a>
-    <div class="md:hidden">
-      <button id="menu-btn" class="focus:outline-none">
-        <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
-        </svg>
-      </button>
-    </div>
-    <div id="menu" class="hidden md:flex space-x-6">
+
+    <!-- Hamburger button (mobile) -->
+    <button id="menu-btn" class="md:hidden focus:outline-none">
+      <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+          d="M4 6h16M4 12h16M4 18h16" />
+      </svg>
+    </button>
+
+    <!-- Desktop menu -->
+    <div class="hidden md:flex space-x-6">
       <a href="about.html" class="hover:underline">About</a>
       <a href="services.html" class="hover:underline">Services</a>
       <a href="how.html" class="hover:underline">How It Works</a>
@@ -29,89 +40,28 @@
     </div>
   </nav>
 
+  <!-- Mobile Sidebar Menu -->
+  <aside id="mobile-menu" 
+    class="fixed top-0 right-0 h-full w-64 bg-brand text-white transform translate-x-full transition-transform duration-300 ease-in-out z-50 flex flex-col p-6 space-y-6 shadow-lg md:hidden">
+    <div class="flex justify-between items-center mb-6">
+      <span class="text-lg font-semibold">Menu</span>
+      <button id="close-menu" class="text-white text-3xl font-bold focus:outline-none">&times;</button>
+    </div>
+    <a href="about.html" class="hover:underline">About</a>
+    <a href="services.html" class="hover:underline">Services</a>
+    <a href="how.html" class="hover:underline">How It Works</a>
+    <a href="booking.html" class="hover:underline">Booking</a>
+    <a href="contact.html" class="hover:underline">Contact</a>
+  </aside>
+
+  <!-- Page Content -->
   <section class="px-4 py-12 max-w-4xl mx-auto">
-  <h2 class="text-3xl sm:text-4xl font-bold text-brand mb-8 text-center">Services</h2>
-  
-  <div class="grid grid-cols-1 gap-6 sm:grid-cols-2 sm:gap-6">
+    <h2 class="text-3xl sm:text-4xl font-bold text-brand mb-8 text-center">Services</h2>
     
-    <!-- AI-Powered Workflow Automation -->
-    <div class="p-6 bg-white rounded-xl shadow-lg text-center transform hover:scale-105 transition duration-300">
-      <div class="flex justify-center mb-4">
-        <svg class="w-12 h-12 text-blue-500" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
-          <path stroke-linecap="round" stroke-linejoin="round" d="M13 16h-1v-4h-1m1-4h.01M12 12h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
-        </svg>
-      </div>
-      <h3 class="text-xl font-semibold mb-2">AI-Powered Workflow Automation</h3>
-      <p class="text-gray-600 text-sm sm:text-base">Automate repetitive tasks to boost efficiency and save time.</p>
-    </div>
-
-    <!-- Contract & Document Automation -->
-    <div class="p-6 bg-white rounded-xl shadow-lg text-center transform hover:scale-105 transition duration-300">
-      <div class="flex justify-center mb-4">
-        <svg class="w-12 h-12 text-green-500" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
-          <path stroke-linecap="round" stroke-linejoin="round" d="M9 12h6m2 4H7m12-8H5m2-4h10v16H7V4z" />
-        </svg>
-      </div>
-      <h3 class="text-xl font-semibold mb-2">Contract & Document Automation</h3>
-      <p class="text-gray-600 text-sm sm:text-base">Streamline document creation, approvals, and management.</p>
-    </div>
-
-    <!-- Payment & Invoicing Systems -->
-    <div class="p-6 bg-white rounded-xl shadow-lg text-center transform hover:scale-105 transition duration-300">
-      <div class="flex justify-center mb-4">
-        <svg class="w-12 h-12 text-yellow-500" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
-          <path stroke-linecap="round" stroke-linejoin="round" d="M12 8c-1.657 0-3 1.343-3 3s1.343 3 3 3 3-1.343 3-3-1.343-3-3-3z" />
-          <path stroke-linecap="round" stroke-linejoin="round" d="M12 2v2m0 16v2m10-10h-2M4 12H2m16.95 5.05l-1.414-1.414M6.464 6.464L5.05 5.05m12.728 0l-1.414 1.414M6.464 17.536l-1.414 1.414" />
-        </svg>
-      </div>
-      <h3 class="text-xl font-semibold mb-2">Payment & Invoicing Systems</h3>
-      <p class="text-gray-600 text-sm sm:text-base">Simplify billing and payments with smart automation.</p>
-    </div>
-
-    <!-- Business Process Optimization -->
-    <div class="p-6 bg-white rounded-xl shadow-lg text-center transform hover:scale-105 transition duration-300">
-      <div class="flex justify-center mb-4">
-        <svg class="w-12 h-12 text-purple-500" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
-          <path stroke-linecap="round" stroke-linejoin="round" d="M9 17v-6h13v6M5 11V7h4v4H5z" />
-        </svg>
-      </div>
-      <h3 class="text-xl font-semibold mb-2">Business Process Optimization</h3>
-      <p class="text-gray-600 text-sm sm:text-base">Identify bottlenecks and improve workflows for maximum efficiency.</p>
-    </div>
-
-    <!-- Data & Reporting Dashboards -->
-    <div class="p-6 bg-white rounded-xl shadow-lg text-center transform hover:scale-105 transition duration-300">
-      <div class="flex justify-center mb-4">
-        <svg class="w-12 h-12 text-red-500" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
-          <path stroke-linecap="round" stroke-linejoin="round" d="M11 3v18M5 13h14" />
-        </svg>
-      </div>
-      <h3 class="text-xl font-semibold mb-2">Data & Reporting Dashboards</h3>
-      <p class="text-gray-600 text-sm sm:text-base">Visualize insights clearly for faster, smarter decisions.</p>
-    </div>
-
-    <!-- Ongoing System Support -->
-    <div class="p-6 bg-white rounded-xl shadow-lg text-center transform hover:scale-105 transition duration-300">
-      <div class="flex justify-center mb-4">
-        <svg class="w-12 h-12 text-indigo-500" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
-          <path stroke-linecap="round" stroke-linejoin="round" d="M18 8v6H6V8m12 0a2 2 0 012 2v8a2 2 0 01-2 2H6a2 2 0 01-2-2v-8a2 2 0 012-2h12z" />
-        </svg>
-      </div>
-      <h3 class="text-xl font-semibold mb-2">Ongoing System Support</h3>
-      <p class="text-gray-600 text-sm sm:text-base">Reliable assistance to keep your systems running smoothly.</p>
-    </div>
-
-  </div>
-</section>
-
-  <footer class="bg-brand text-white py-6 text-center">
-    <p>&copy; 2025 ClearPath Systems. All rights reserved.</p>
-  </footer>
-
-  <script>
-    const btn = document.getElementById('menu-btn');
-    const menu = document.getElementById('menu');
-    btn.addEventListener('click', () => { menu.classList.toggle('hidden'); });
-  </script>
-</body>
-</html>
+    <div class="grid grid-cols-1 gap-6 sm:grid-cols-2 sm:gap-6">
+      
+      <!-- AI-Powered Workflow Automation -->
+      <div class="p-6 bg-white rounded-xl shadow-lg text-center transform hover:scale-105 transition duration-300">
+        <div class="flex justify-center mb-4">
+          <svg class="w-12 h-12 text-blue-500" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M13 16h-1v-4h-1m1-4h.01M12 12h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
